@@ -60,6 +60,11 @@ enum HOTKEY_COMMAND {
 
 	//misc.
 	HOTKEY_USER_CMD,
+	HOTKEY_USER_CMD_1,
+#ifdef USRCMD2
+	HOTKEY_USER_CMD_2,
+	HOTKEY_USER_CMD_3,
+#endif
 	HOTKEY_NULL
 };
 
@@ -190,6 +195,11 @@ public:
 	virtual void show_help() {}
 	virtual void show_chat_log() {}
 	virtual void user_command() {}
+	virtual void user_command_1() {}
+#ifdef USRCMD2
+	virtual void user_command_2() {}
+	virtual void user_command_3() {}
+#endif
 	virtual void change_language() {}
 	virtual void play_replay() {}
 	virtual void reset_replay() {}
