@@ -505,6 +505,11 @@ bool play_controller::can_execute_command(hotkey::HOTKEY_COMMAND command, int in
 	case hotkey::HOTKEY_SEARCH:
 	case hotkey::HOTKEY_HELP:
 	case hotkey::HOTKEY_USER_CMD:
+	case hotkey::HOTKEY_USER_CMD_1:
+#ifdef USRCMD2
+	case hotkey::HOTKEY_USER_CMD_2:
+	case hotkey::HOTKEY_USER_CMD_3:
+#endif
 		return true;
 
 	case hotkey::HOTKEY_SAVE_GAME:
