@@ -44,6 +44,7 @@ Version 1.3.6+svn:
      observing (bug #9610)
    * 'help' and 'more' button in the title screen now also have a tooltip
      (bug #9618 patch #790)
+   * added a hotkey for clearing the chat messages (patch #770)
  * WML engine:
    * now [base_unit]id= inside [unit] can extend upon existing unit types
    * new tag [filter_radius] to allow greater control over radius expansion
